# packages/api-client/openapi.json
@@ -1792,6 +1792,18 @@
             }
           },
           {
+            "name": "cursor",
+            "in": "query",
+            "schema": {
+              "pattern": "^-?(?:0|[1-9]\\d*)$",
+              "type": [
+                "integer",
+                "string"
+              ],
+              "format": "int64"
+            }
+          },
+          {
             "name": "limit",
             "in": "query",
             "schema": {
